<resources>
    <string name="app_name">QLoveAICore</string>
    <string name="api_error_req_JSONException">请求数据体的Json格式错误！</string>
    <string name="api_error_NO_ACCESS_KEY">未带校验access_key，或者未填请求数据！</string>
    <string name="api_error_REQ_METHOD_ERROR">请求方法不对，比如POST请求，客户端却发了GET请求！</string>
    <string name="api_error_POST_DATA_ERROR">POST数据中，填写的数据不符合要求！</string>
    <string name="api_error_ACCESS_KEY_FAILED">Access key不正确或者过期！</string>
    <string name="api_error_ACCESS_KEY_EMPTY">申请Access key为空！</string>
    <string name="api_error_req_ACCESS_KEY_FAILED">申请Access key失败！</string>
    <string name="api_error_req_CONFIG_LIST_FAILED">获取配置列表失败！</string>
    <string name="api_error_req_PID_LICENCE_FAILED">申请PidPubKeyLicence失败！</string>
    <string name="api_error_rsp_JSONException">返回的Json数据解析错误</string>
    <string name="api_error_rsp_IOException">服务暂时不可用！</string>
    <string name="api_error_rsp_SERVER_ERROR">服务器错误！</string>
    <string name="api_error_rsp_HttpException">服务器错误！</string>
    <string name="api_error_rsp_EMPTY">返回的数据为空！</string>
    <string name="api_error_rsp_CONTENT_EMPTY">返回的数据内容为空！</string>
    <string name="api_error_rsp_empty_contentEncoding">返回的数据无编码格式！</string>
    <string name="api_error_unknoow">Ai Engine请求未知错误！</string>
    <string name="vedio_contacts">视频联系人</string>
    <string name="tx_unbind">解绑 QQ</string>
    <string name="tx_add_uploadtask">Add Upload Task</string>
    <string name="input_tts">输入你想播放的tts</string>
    <string name="play_tts">播放tts</string>
    <string name="enable_dump_callback">Dump录音回调</string>
    <string name="enable_dump_every_voice">Dump所有唤醒识别录音</string>
    <string name="enable_dump_voice">Dump唤醒识别成功录音</string>
    <string name="enable_dump_tts">Dump TTS</string>
    <string name="enable_wakeup_failure_test">唤醒失败测试</string>
    <string name="use_separate_egg_app">使用独立蛋动画App</string>
    <string name="enable_continous_speaking">开启连续说话模式</string>
    <string name="enable_bt_sco_demo">开启蓝牙demo功能</string>
    <string name="hint_input_search_index">模型编号</string>
    <string name="hint_input_search_threshold">唤醒阈值</string>
    <string name="hint_input_snsry_wakeup_only">Wakeup Only</string>
    <string name="hint_input_snsry_dump_wakeup_audio">Dump特殊唤醒录音</string>
    <string name="hint_input_snsry_wakeup_enable">开启本地唤醒1</string>
    <string name="enable_ai_prompt">开启小微提示信息</string>
    <string name="enable_tx_sdk_log">打开腾讯sdk日志</string>
    <string name="use_test_service_type">使用测试APP</string>
    <string name="enable_save_tts_voice">保存tts声音文件</string>
    <string name="api_error_authticated_failed">唤醒引擎鉴权失败</string>
    <string name="hint_input_speech_wakeup_enable">开启本地唤醒2</string>
    <string name="exit">退出</string>
    <string name="get_text_button">获取din号</string>
    <string name="get_text_hint">点击按钮获取设备din号</string>
    <string name="get_text_content">设备din号：%s</string>

    <string name="get_text_sdk_button">获取SDK版本信息</string>
    <string name="get_text_sdk_hint">点击按钮获取设备SDK版本信息</string>
    <string name="get_text_sdk_content">设备SDK版本信息：%s</string>
</resources>
